--- a/popTravel/Base.lproj/Main.storyboard
+++ b/popTravel/Base.lproj/Main.storyboard
@@ -47,7 +47,7 @@
             </objects>
             <point key="canvasLocation" x="775" y="-1000"/>
         </scene>
-        <!--Third View Controller-->
+        <!--Data Source-->
         <scene sceneID="tir-kI-bfL">
             <objects>
                 <viewController id="gmT-hx-T0e" customClass="ThirdViewController" sceneMemberID="viewController">
@@ -55,13 +55,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="third view" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RHT-0C-baY">
-                                <rect key="frame" x="161" y="140" width="153" height="168"/>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MvM-hf-ZP6" customClass="FSCalendar">
+                                <rect key="frame" x="0.0" y="33" width="414" height="389"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="gmT-hx-T0e" id="YVk-rt-5Fd"/>
+                                    <outlet property="delegate" destination="gmT-hx-T0e" id="bse-gg-HI9"/>
+                                </connections>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="5sZ-ne-vPO"/>
@@ -158,7 +160,7 @@
     <resources>
         <image name="add_location_btn" width="17" height="24.333333969116211"/>
         <image name="calendar_icon" width="20" height="20"/>
-        <image name="home_icon" width="32" height="37.333332061767578"/>
+        <image name="home_icon" width="16" height="18.666666030883789"/>
         <image name="settings_btn" width="22.666666030883789" height="22.666666030883789"/>
     </resources>
 </document>
