added a working FS calendar

--- a/popTravel/Base.lproj/Main.storyboard
+++ b/popTravel/Base.lproj/Main.storyboard
@@ -47,24 +47,13 @@
             </objects>
             <point key="canvasLocation" x="775" y="-1000"/>
         </scene>
-        <!--Data Source-->
+        <!--Third View Controller-->
         <scene sceneID="tir-kI-bfL">
             <objects>
-                <viewController id="gmT-hx-T0e" customClass="ThirdViewController" sceneMemberID="viewController">
+                <viewController id="gmT-hx-T0e" customClass="ThirdViewController" customModule="popTravel" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Qdm-QX-bzg">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MvM-hf-ZP6" customClass="FSCalendar">
-                                <rect key="frame" x="0.0" y="33" width="414" height="389"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <connections>
-                                    <outlet property="dataSource" destination="gmT-hx-T0e" id="YVk-rt-5Fd"/>
-                                    <outlet property="delegate" destination="gmT-hx-T0e" id="bse-gg-HI9"/>
-                                </connections>
-                            </view>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="5sZ-ne-vPO"/>
                     </view>
