--- a/popTravel/Base.lproj/Main.storyboard
+++ b/popTravel/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="VaW-hQ-FFD">
     <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -396,6 +396,92 @@
             </objects>
             <point key="canvasLocation" x="773.60000000000002" y="1103.2019704433499"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="hWR-LH-Sbp">
+            <objects>
+                <viewController storyboardIdentifier="LocationViewController" id="VaW-hQ-FFD" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="bNe-2s-TGL" customClass="LocationView" customModule="RestaurantApp" customModuleProvider="target">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="8c0-6b-XW2">
+                                <rect key="frame" x="0.0" y="44" width="375" height="512.33333333333337"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="location-permission" translatesAutoresizingMaskIntoConstraints="NO" id="6G1-sc-ONL">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="406"/>
+                                    </imageView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="LbO-A6-9ez">
+                                        <rect key="frame" x="0.0" y="406" width="375" height="106.33333333333337"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Need Your Location" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ewl-xO-ODT">
+                                                <rect key="frame" x="32" y="8" width="311" height="33"/>
+                                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="24"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="200" verticalCompressionResistancePriority="1000" text="Please give us acces to your GPS location" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pZF-gh-IVa">
+                                                <rect key="frame" x="32" y="49" width="311" height="49.333333333333343"/>
+                                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="18"/>
+                                                <color key="textColor" red="0.37055522200000002" green="0.37056469920000001" blue="0.37055957319999999" alpha="0.75" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <edgeInsets key="layoutMargins" top="8" left="32" bottom="8" right="32"/>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="EXY-xw-lYw">
+                                <rect key="frame" x="0.0" y="646" width="375" height="116"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rCh-hN-iRg">
+                                        <rect key="frame" x="32" y="8" width="311" height="50"/>
+                                        <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="bqn-pu-LPf"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="17"/>
+                                        <state key="normal" title="Allow">
+                                            <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                <integer key="value" value="25"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D3H-fW-N9g">
+                                        <rect key="frame" x="32" y="58" width="311" height="50"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="17"/>
+                                        <state key="normal" title="No, Another Time">
+                                            <color key="titleColor" red="0.37055522200000002" green="0.37056469920000001" blue="0.37055957319999999" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                <integer key="value" value="25"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </button>
+                                </subviews>
+                                <edgeInsets key="layoutMargins" top="8" left="32" bottom="8" right="32"/>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="EXY-xw-lYw" firstAttribute="leading" secondItem="rDh-7X-9B1" secondAttribute="leading" id="EnX-Vl-gUd"/>
+                            <constraint firstItem="8c0-6b-XW2" firstAttribute="leading" secondItem="bNe-2s-TGL" secondAttribute="leading" id="Lk4-9m-3VN"/>
+                            <constraint firstItem="rDh-7X-9B1" firstAttribute="bottom" secondItem="EXY-xw-lYw" secondAttribute="bottom" constant="16" id="OSz-FG-lmV"/>
+                            <constraint firstItem="6G1-sc-ONL" firstAttribute="height" secondItem="bNe-2s-TGL" secondAttribute="height" multiplier="0.5" id="aJ4-ZZ-kxg"/>
+                            <constraint firstItem="8c0-6b-XW2" firstAttribute="top" secondItem="rDh-7X-9B1" secondAttribute="top" id="feg-NZ-v6b"/>
+                            <constraint firstItem="rDh-7X-9B1" firstAttribute="trailing" secondItem="EXY-xw-lYw" secondAttribute="trailing" id="mL6-Cd-RAQ"/>
+                            <constraint firstAttribute="trailing" secondItem="8c0-6b-XW2" secondAttribute="trailing" id="yi1-6I-NWo"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="rDh-7X-9B1"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Oqs-hw-K1M" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1380" y="80"/>
+        </scene>
     </scenes>
     <resources>
         <image name="add_location_btn" width="14" height="19"/>
@@ -403,6 +489,7 @@
         <image name="camera" width="48" height="48"/>
         <image name="home" width="24" height="24"/>
         <image name="home_icon" width="16" height="18.666666030883789"/>
+        <image name="location-permission" width="1073" height="968"/>
         <image name="menu" width="24" height="24"/>
         <image name="profile-1" width="24" height="24"/>
         <image name="profile_icon" width="20" height="20"/>
